# byron

./: Cargo.toml  README.md
.github/workflows/: lint.yml  test.yml
src/: base.rs  lib.rs  shared.rs  tests.rs
src/types/: list.rs  mod.rs  named.rs  nullable.rs
src/types/full/: enums.rs  inputs.rs  interfaces.rs  mod.rs  objects.rs  scalars.rs  unions.rs
src/types/interface/: child.rs  mod.rs  parent.rs
